# lodepy

./: .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-error.md
.github/workflows/: publish-to-pypi
docs/: conf.py  data.rst  group.rst  index.rst  main.rst  task.rst  usage.rst
src/lodepy/: __init__.py  __init__.pyi  setup.py
src/lodepy/core/: __init__.py  comparable.py  lodepy.py  main.py  operable.py  script.py  version.py
src/lodepy/data/: DataStore.py  NodeVariables.py  __init__.py  data_store.py  node_variables.py
src/lodepy/git/: __init__.py  git_status.py  git_version.py  status.py
src/lodepy/group/: Group.py  GroupReturn.py  __init__.py  group_return.py
src/lodepy/groups/: __init__.py  group.py  group_executor.py  group_return.py
src/lodepy/handling/: LodepyError.py  LogManager.py  __init__.py  lodepy_error.py  log_error.py  log_manager.py
src/lodepy/nodes/: Node.py  NodeReturn.py  __init__.py  node.py  node_executor.py  node_return.py
src/lodepy/task/: Task.py  __init__.py
src/lodepy/tasks/: __init__.py  task.py  task_pipeline_blob.txt
src/lodepy/tasks/general/: get_info.py
src/lodepy/tasks/git/: __init__.py  git_status.py  git_version.py
src/lodepy/tasks/installers/: pip.py
tests/: test.py  test_group_text.txt
